--- a/internal/views/layout.templ
+++ b/internal/views/layout.templ
@@ -6,8 +6,8 @@ templ Layout() {
 		<head>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-			<script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
-			<script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
+			<link href="/static/app.css" rel="stylesheet"/>
+			<script src="/static/app.js" defer></script>
 		</head>
 		<body>
 			{ children... }
