--- a/internal/web/page.templ
+++ b/internal/web/page.templ
@@ -1,4 +1,4 @@
-package views
+package web
 
 import "github.com/bnadland/rhizome/internal/db"
 import "github.com/bnadland/rhizome/internal/markdown"
