refactor: move layout view into asset package

--- a/internal/assets/layout.templ
+++ b/internal/assets/layout.templ
@@ -1,4 +1,4 @@
-package web
+package assets
 
 templ Layout(title string) {
 	<!DOCTYPE html>
@@ -8,7 +8,7 @@ templ Layout(title string) {
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<link href="/static/app.css" rel="stylesheet"/>
 			<script src="/static/app.js" defer></script>
-			<title>{title}</title>
+			<title>{ title }</title>
 		</head>
 		<body>
 			{ children... }
