--- a/internal/web/not_found.templ
+++ b/internal/web/not_found.templ
@@ -1,7 +1,9 @@
 package web
 
+import "github.com/bnadland/rhizome/internal/assets"
+
 templ NotFound() {
-	@Layout("Not found") {
+	@assets.Layout("Not found") {
 		<div class="min-h-screen flex flex-grow items-center justify-center bg-gray-50">
 			<div class="rounded-lg bg-white p-8 text-center shadow-xl">
 				<h1 class="mb-4 text-4xl font-bold">404</h1>
