refactor: move not found code to layout since it's a shared concern and split page handler into wiki package

--- a/internal/wiki/page.templ
+++ b/internal/wiki/page.templ
@@ -1,4 +1,4 @@
-package web
+package wiki
 
 import "github.com/bnadland/rhizome/internal/db"
 import "github.com/bnadland/rhizome/internal/markdown"
