--- a/internal/views/not_found.templ
+++ b/internal/views/not_found.templ
@@ -1,20 +1,4 @@
-package assets
-
-templ Layout(title string) {
-	<!DOCTYPE html>
-	<html lang="en">
-		<head>
-			<meta charset="UTF-8"/>
-			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-			<link href="/static/app.css" rel="stylesheet"/>
-			<script src="/static/app.js" defer></script>
-			<title>{ title }</title>
-		</head>
-		<body>
-			{ children... }
-		</body>
-	</html>
-}
+package views
 
 templ NotFound() {
 	@Layout("Not found") {
