--- a/internal/views/page.templ
+++ b/internal/views/page.templ
@@ -1,11 +1,10 @@
-package wiki
+package views
 
 import "github.com/bnadland/rhizome/internal/db"
 import "github.com/bnadland/rhizome/internal/markdown"
-import "github.com/bnadland/rhizome/internal/assets"
 
 templ Page(page db.Page) {
-	@assets.Layout(page.Title) {
+	@Layout(page.Title) {
 		<main class="container mx-auto sm:mx-8 mt-8">
 			<article>
 				<h1 class="text-3xl">{ page.Title }</h1>
